# Thesis_Reconciliation_API

./: .gitignore  Makefile  README.md  benchmark  pyproject.toml  requirements.txt  run.ps1  split raw CSV into sample CSV.py
.github/workflows/: ci.yml
app/: db_connection.py  extract_from_query.py  logging_config.py  main.py  projects_small_case.py  reconcile_logic.py  reconcile_norm_score.py  reconcile_record.py  reconmodels.py
data/raw/: test10rows.csv  test10rows.db
docs/: roadmap.md
repd_reconciliation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: create SQLite DB from CSV.py  create_SQLite_DB_from_CSV.py  split raw CSV into sample CSV.py  split_raw_CSV_into_sample_CSV.py
tests/: test_root.py
